--- a/BaseUnrealEnvironment/pom.xml
+++ b/BaseUnrealEnvironment/pom.xml
@@ -26,12 +26,10 @@
 			<artifactId>goal-ut2004-environment-util</artifactId>
 			<version>3.5.4-SNAPSHOT</version>
 		</dependency>
-
 		<dependency>
-			<groupId>apleis</groupId>
+			<groupId>eishub</groupId>
 			<artifactId>eis</artifactId>
-			<version>0.3</version>
-			<scope>provided</scope>
+			<version>0.5.0</version>
 		</dependency>
 
 
@@ -54,6 +52,10 @@
 			<id>amis-artifactory</id>
 			<name>AMIS Artifactory</name>
 			<url>http://diana.ms.mff.cuni.cz:8081/artifactory/repo</url>
+		</repository>
+		<repository>
+			<id>eishub-mvn-repo</id>
+			<url>https://raw.github.com/eishub/mvn-repo/master</url>
 		</repository>
 	</repositories>
 </project>
