--- a/UT2004Environment/pom.xml
+++ b/UT2004Environment/pom.xml
@@ -31,10 +31,9 @@
 			<version>3.5.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>apleis</groupId>
+			<groupId>eishub</groupId>
 			<artifactId>eis</artifactId>
-			<version>0.3</version>
-			<scope>provided</scope>
+			<version>0.5.0</version>
 		</dependency>
 
 		<dependency>
@@ -58,6 +57,10 @@
 			<id>amis-artifactory</id>
 			<name>AMIS Artifactory</name>
 			<url>http://diana.ms.mff.cuni.cz:8081/artifactory/repo</url>
+		</repository>
+		<repository>
+			<id>eishub-mvn-repo</id>
+			<url>https://raw.github.com/eishub/mvn-repo/master</url>
 		</repository>
 	</repositories>
 
