--- a/UTVisualizer/pom.xml
+++ b/UTVisualizer/pom.xml
@@ -2,34 +2,27 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>cz.cuni.amis.pogamut.ut2004</groupId>
-		<artifactId>pogamut-ut2004-pom</artifactId>
-		<version>3.5.4-SNAPSHOT</version>
-		<relativePath>../../Poms/PogamutUT2004Pom/pom.xml</relativePath>
-	</parent>
 
 	<groupId>nl.tudelft.goal</groupId>
 	<artifactId>goal-unreal-visualizer</artifactId>
 	<name>UTVisualizer</name>
 	<description>A visualizer for Unreal Tournament.</description>
+	<version>3.5.5-SNAPSHOT</version>
 
 
-	<properties>
-		<skipTests>false</skipTests>
-		<maven.javadoc.skip>true</maven.javadoc.skip>
-	</properties>
+	<!-- <properties> <skipTests>false</skipTests> <maven.javadoc.skip>true</maven.javadoc.skip> 
+		</properties> -->
 
 	<dependencies>
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-unreal-visualizer-frame</artifactId>
-			<version>3.5.4-SNAPSHOT</version>
+			<version>3.5.5-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-ut-visualizer-connection</artifactId>
-			<version>3.5.4-SNAPSHOT</version>
+			<version>3.5.5-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>cz.cuni.amis.pogamut</groupId>
@@ -41,11 +34,15 @@
 			<artifactId>eis</artifactId>
 			<version>0.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
+
 	</dependencies>
+
 	<build>
-
-
-
 		<plugins>
 			<!-- Adds manifest -->
 			<plugin>
