--- a/UT3Environment/.classpath
+++ b/UT3Environment/.classpath
@@ -1,26 +1,161 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="target/classes" path="src/main/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="src" path="src/test/java" output="target/test-classes" including="**/*.java"/>
+  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
+  <classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="var" path="M2_REPO/javax/vecmath/vecmath/1.5.1/vecmath-1.5.1.jar"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="var" path="M2_REPO/cz/cuni/amis/pogamut/pogamut-ut3/3.5.4-SNAPSHOT/pogamut-ut3-3.5.4-SNAPSHOT.jar" sourcepath="M2_REPO/cz/cuni/amis/pogamut/pogamut-ut3/3.5.4-SNAPSHOT/pogamut-ut3-3.5.4-SNAPSHOT-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/cz/cuni/amis/pogamut/pogamut-ut3/3.5.4-SNAPSHOT/pogamut-ut3-3.5.4-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/cz/cuni/amis/pogamut/pogamut-base/3.5.4-SNAPSHOT/pogamut-base-3.5.4-SNAPSHOT.jar" sourcepath="M2_REPO/cz/cuni/amis/pogamut/pogamut-base/3.5.4-SNAPSHOT/pogamut-base-3.5.4-SNAPSHOT-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/cz/cuni/amis/pogamut/pogamut-base/3.5.4-SNAPSHOT/pogamut-base-3.5.4-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/google/inject/guice/2.0/guice-2.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/aopalliance/aopalliance/1.0/aopalliance-1.0.jar" sourcepath="M2_REPO/aopalliance/aopalliance/1.0/aopalliance-1.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/google/inject/extensions/guice-multibindings/2.0/guice-multibindings-2.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/google/inject/extensions/guice-assisted-inject/2.0/guice-assisted-inject-2.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/cz/cuni/amis/amis-utils/3.5.4-SNAPSHOT/amis-utils-3.5.4-SNAPSHOT.jar" sourcepath="M2_REPO/cz/cuni/amis/amis-utils/3.5.4-SNAPSHOT/amis-utils-3.5.4-SNAPSHOT-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/cz/cuni/amis/amis-utils/3.5.4-SNAPSHOT/amis-utils-3.5.4-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/commons-beanutils/commons-beanutils/1.8.3/commons-beanutils-1.8.3.jar" sourcepath="M2_REPO/commons-beanutils/commons-beanutils/1.8.3/commons-beanutils-1.8.3-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/commons-beanutils/commons-beanutils/1.8.3/commons-beanutils-1.8.3-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar" sourcepath="M2_REPO/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/cz/cuni/amis/javageom/3.5.4-SNAPSHOT/javageom-3.5.4-SNAPSHOT.jar" sourcepath="M2_REPO/cz/cuni/amis/javageom/3.5.4-SNAPSHOT/javageom-3.5.4-SNAPSHOT-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/cz/cuni/amis/javageom/3.5.4-SNAPSHOT/javageom-3.5.4-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/cz/cuni/amis/introspection/1.0.0-SNAPSHOT/introspection-1.0.0-SNAPSHOT.jar" sourcepath="M2_REPO/cz/cuni/amis/introspection/1.0.0-SNAPSHOT/introspection-1.0.0-SNAPSHOT-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/cz/cuni/amis/introspection/1.0.0-SNAPSHOT/introspection-1.0.0-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/jython/jython/1.2007/jython-1.2007.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/sun/script/jython-engine/1.0/jython-engine-1.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/nl/tudelft/goal/goal-base-unreal-environment/3.5.5-SNAPSHOT/goal-base-unreal-environment-3.5.5-SNAPSHOT.jar" sourcepath="M2_REPO/nl/tudelft/goal/goal-base-unreal-environment/3.5.5-SNAPSHOT/goal-base-unreal-environment-3.5.5-SNAPSHOT-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/nl/tudelft/goal/goal-base-unreal-environment/3.5.5-SNAPSHOT/goal-base-unreal-environment-3.5.5-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/nl/tudelft/goal/goal-ut2004-environment-util/3.5.5-SNAPSHOT/goal-ut2004-environment-util-3.5.5-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/eishub/eis/0.5.0/eis-0.5.0.jar" sourcepath="M2_REPO/eishub/eis/0.5.0/eis-0.5.0-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/eishub/eis/0.5.0/eis-0.5.0-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/junit/junit/4.12/junit-4.12.jar" sourcepath="M2_REPO/junit/junit/4.12/junit-4.12-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/junit/junit/4.12/junit-4.12-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar" sourcepath="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/nl/tudelft/pogamut/goal-unreal-server-connection/3.5.5-SNAPSHOT/goal-unreal-server-connection-3.5.5-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/nl/tudelft/pogamut/pogamut-ut3-weapon-shooting/3.5.4-SNAPSHOT/pogamut-ut3-weapon-shooting-3.5.4-SNAPSHOT.jar" sourcepath="M2_REPO/nl/tudelft/pogamut/pogamut-ut3-weapon-shooting/3.5.4-SNAPSHOT/pogamut-ut3-weapon-shooting-3.5.4-SNAPSHOT-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/nl/tudelft/pogamut/pogamut-ut3-weapon-shooting/3.5.4-SNAPSHOT/pogamut-ut3-weapon-shooting-3.5.4-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/nl/tudelft/pogamut/pogamut-unreal-weapon-shooting/3.5.4-SNAPSHOT/pogamut-unreal-weapon-shooting-3.5.4-SNAPSHOT.jar" sourcepath="M2_REPO/nl/tudelft/pogamut/pogamut-unreal-weapon-shooting/3.5.4-SNAPSHOT/pogamut-unreal-weapon-shooting-3.5.4-SNAPSHOT-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/nl/tudelft/pogamut/pogamut-unreal-weapon-shooting/3.5.4-SNAPSHOT/pogamut-unreal-weapon-shooting-3.5.4-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/nl/tudelft/goal/goal-unreal-visualizer/3.5.5-SNAPSHOT/goal-unreal-visualizer-3.5.5-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/nl/tudelft/goal/goal-unreal-visualizer-frame/3.5.5-SNAPSHOT/goal-unreal-visualizer-frame-3.5.5-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/gluegen/gluegen-rt-main/2.0-rc11/gluegen-rt-main-2.0-rc11.jar" sourcepath="M2_REPO/org/jogamp/gluegen/gluegen-rt-main/2.0-rc11/gluegen-rt-main-2.0-rc11-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/jogamp/gluegen/gluegen-rt-main/2.0-rc11/gluegen-rt-main-2.0-rc11-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/gluegen/gluegen-rt/2.0-rc11/gluegen-rt-2.0-rc11.jar" sourcepath="M2_REPO/org/jogamp/gluegen/gluegen-rt/2.0-rc11/gluegen-rt-2.0-rc11-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/jogamp/gluegen/gluegen-rt/2.0-rc11/gluegen-rt-2.0-rc11-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/gluegen/gluegen-rt/2.0-rc11/gluegen-rt-2.0-rc11-natives-android-armv6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/gluegen/gluegen-rt/2.0-rc11/gluegen-rt-2.0-rc11-natives-linux-amd64.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/gluegen/gluegen-rt/2.0-rc11/gluegen-rt-2.0-rc11-natives-linux-armv6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/gluegen/gluegen-rt/2.0-rc11/gluegen-rt-2.0-rc11-natives-linux-armv6hf.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/gluegen/gluegen-rt/2.0-rc11/gluegen-rt-2.0-rc11-natives-linux-i586.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/gluegen/gluegen-rt/2.0-rc11/gluegen-rt-2.0-rc11-natives-macosx-universal.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/gluegen/gluegen-rt/2.0-rc11/gluegen-rt-2.0-rc11-natives-solaris-amd64.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/gluegen/gluegen-rt/2.0-rc11/gluegen-rt-2.0-rc11-natives-solaris-i586.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/gluegen/gluegen-rt/2.0-rc11/gluegen-rt-2.0-rc11-natives-windows-amd64.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/gluegen/gluegen-rt/2.0-rc11/gluegen-rt-2.0-rc11-natives-windows-i586.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/jogl/jogl-all-main/2.0-rc11/jogl-all-main-2.0-rc11.jar" sourcepath="M2_REPO/org/jogamp/jogl/jogl-all-main/2.0-rc11/jogl-all-main-2.0-rc11-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/jogamp/jogl/jogl-all-main/2.0-rc11/jogl-all-main-2.0-rc11-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/jogl/jogl-all/2.0-rc11/jogl-all-2.0-rc11.jar" sourcepath="M2_REPO/org/jogamp/jogl/jogl-all/2.0-rc11/jogl-all-2.0-rc11-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/jogamp/jogl/jogl-all/2.0-rc11/jogl-all-2.0-rc11-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/jogl/jogl-all/2.0-rc11/jogl-all-2.0-rc11-natives-android-armv6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/jogl/jogl-all/2.0-rc11/jogl-all-2.0-rc11-natives-linux-amd64.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/jogl/jogl-all/2.0-rc11/jogl-all-2.0-rc11-natives-linux-armv6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/jogl/jogl-all/2.0-rc11/jogl-all-2.0-rc11-natives-linux-armv6hf.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/jogl/jogl-all/2.0-rc11/jogl-all-2.0-rc11-natives-linux-i586.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/jogl/jogl-all/2.0-rc11/jogl-all-2.0-rc11-natives-macosx-universal.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/jogl/jogl-all/2.0-rc11/jogl-all-2.0-rc11-natives-solaris-amd64.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/jogl/jogl-all/2.0-rc11/jogl-all-2.0-rc11-natives-solaris-i586.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/jogl/jogl-all/2.0-rc11/jogl-all-2.0-rc11-natives-windows-amd64.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jogamp/jogl/jogl-all/2.0-rc11/jogl-all-2.0-rc11-natives-windows-i586.jar"/>
+  <classpathentry kind="var" path="M2_REPO/nl/tudelft/goal/goal-ut-visualizer-connection/3.5.5-SNAPSHOT/goal-ut-visualizer-connection-3.5.5-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/cz/cuni/amis/pogamut/pogamut-unreal/3.5.4-SNAPSHOT/pogamut-unreal-3.5.4-SNAPSHOT.jar" sourcepath="M2_REPO/cz/cuni/amis/pogamut/pogamut-unreal/3.5.4-SNAPSHOT/pogamut-unreal-3.5.4-SNAPSHOT-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/cz/cuni/amis/pogamut/pogamut-unreal/3.5.4-SNAPSHOT/pogamut-unreal-3.5.4-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/cz/cuni/amis/pogamut/pogamut-ut2004/3.5.4-ut3-development-SNAPSHOT/pogamut-ut2004-3.5.4-ut3-development-SNAPSHOT.jar" sourcepath="M2_REPO/cz/cuni/amis/pogamut/pogamut-ut2004/3.5.4-ut3-development-SNAPSHOT/pogamut-ut2004-3.5.4-ut3-development-SNAPSHOT-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/cz/cuni/amis/pogamut/pogamut-ut2004/3.5.4-ut3-development-SNAPSHOT/pogamut-ut2004-3.5.4-ut3-development-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/apache/ant/ant-trax/1.8.0/ant-trax-1.8.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/net/sourceforge/saxon/saxon/9.1.0.8/saxon-9.1.0.8.jar" sourcepath="M2_REPO/net/sourceforge/saxon/saxon/9.1.0.8/saxon-9.1.0.8-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/net/sourceforge/saxon/saxon/9.1.0.8/saxon-9.1.0.8-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/cz/cuni/amis/xmllist/1.0.0-SNAPSHOT/xmllist-1.0.0-SNAPSHOT.jar" sourcepath="M2_REPO/cz/cuni/amis/xmllist/1.0.0-SNAPSHOT/xmllist-1.0.0-SNAPSHOT-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/thoughtworks/xstream/xstream/1.3.1/xstream-1.3.1.jar" sourcepath="M2_REPO/com/thoughtworks/xstream/xstream/1.3.1/xstream-1.3.1-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/com/thoughtworks/xstream/xstream/1.3.1/xstream-1.3.1-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/xpp3/xpp3_min/1.1.4c/xpp3_min-1.1.4c.jar" sourcepath="M2_REPO/xpp3/xpp3_min/1.1.4c/xpp3_min-1.1.4c-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/xpp3/xpp3_min/1.1.4c/xpp3_min-1.1.4c-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/cz/cuni/amis/afsm/1.0.1-SNAPSHOT/afsm-1.0.1-SNAPSHOT.jar" sourcepath="M2_REPO/cz/cuni/amis/afsm/1.0.1-SNAPSHOT/afsm-1.0.1-SNAPSHOT-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/cz/cuni/amis/afsm/1.0.1-SNAPSHOT/afsm-1.0.1-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/cz/cuni/amis/amis-path-finding/3.5.4-SNAPSHOT/amis-path-finding-3.5.4-SNAPSHOT.jar" sourcepath="M2_REPO/cz/cuni/amis/amis-path-finding/3.5.4-SNAPSHOT/amis-path-finding-3.5.4-SNAPSHOT-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/cz/cuni/amis/amis-path-finding/3.5.4-SNAPSHOT/amis-path-finding-3.5.4-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
 </classpath>
