--- a/UTVisualizer/pom.xml
+++ b/UTVisualizer/pom.xml
@@ -8,7 +8,13 @@
 	<name>UTVisualizer</name>
 	<description>A visualizer for Unreal Tournament.</description>
 	<version>3.5.5-SNAPSHOT</version>
-
+	<url>https://github.com/eishub/UT3</url>
+	<licenses>
+		<license>
+			<name>GNU General Public License (GPL)</name>
+			<url>http://www.gnu.org/licenses/gpl.html</url>
+		</license>
+	</licenses>
 
 	<!-- <properties> <skipTests>false</skipTests> <maven.javadoc.skip>true</maven.javadoc.skip> 
 		</properties> -->
