--- a/EmohawkEnvironment/pom.xml
+++ b/EmohawkEnvironment/pom.xml
@@ -14,6 +14,14 @@
 	<artifactId>goal-emohawk-environment</artifactId>
 	<name>goal-emohawk-environment</name>
 
+	<url>https://github.com/eishub/UT3</url>
+	<licenses>
+		<license>
+			<name>GNU General Public License (GPL)</name>
+			<url>http://www.gnu.org/licenses/gpl.html</url>
+		</license>
+	</licenses>
+	
 	<dependencies>
 
 		<dependency>
