--- a/UT3Environment/pom.xml
+++ b/UT3Environment/pom.xml
@@ -7,7 +7,14 @@
 	<artifactId>goal-ut3-environment</artifactId>
 	<name>goal-ut3-environment</name>
 	<version>3.5.5-SNAPSHOT</version>
-
+	<url>https://github.com/eishub/UT3</url>
+	<licenses>
+		<license>
+			<name>GNU General Public License (GPL)</name>
+			<url>http://www.gnu.org/licenses/gpl.html</url>
+		</license>
+	</licenses>
+	
 	<dependencies>
 		<dependency>
 			<groupId>cz.cuni.amis.pogamut</groupId>
