--- a/UTVisualizerDependencies/pom.xml
+++ b/UTVisualizerDependencies/pom.xml
@@ -6,7 +6,14 @@
 	<version>3.5.4-SNAPSHOT</version>
 	<name>VisualizerDependencies</name>
 	<description>Dependencies for the visualizer</description>
-
+	<url>https://github.com/eishub/UT3</url>
+	<licenses>
+		<license>
+			<name>GNU General Public License (GPL)</name>
+			<url>http://www.gnu.org/licenses/gpl.html</url>
+		</license>
+	</licenses>
+	
 	<dependencies>
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
