poms: added developer and set license to GPL v3

--- a/UTVisualizerConnection/pom.xml
+++ b/UTVisualizerConnection/pom.xml
@@ -12,10 +12,20 @@
 	<url>https://github.com/eishub/UT3</url>
 	<licenses>
 		<license>
-			<name>GNU General Public License (GPL)</name>
-			<url>http://www.gnu.org/licenses/gpl.html</url>
+			<name>The GNU General Public License, Version 3.0</name>
+			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
 		</license>
 	</licenses>
+
+	<developers>
+		<developer>
+			<name>Koen Hindriks</name>
+			<email>k.v.hindriks@gmail.com</email>
+			<organization>eishub</organization>
+			<organizationUrl>https://github.com/koenhindriks</organizationUrl>
+		</developer>
+	</developers>
+	
 	<dependencies>
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
