--- a/UTVisualizer/pom.xml
+++ b/UTVisualizer/pom.xml
@@ -11,10 +11,19 @@
 	<url>https://github.com/eishub/UT3</url>
 	<licenses>
 		<license>
-			<name>GNU General Public License (GPL)</name>
-			<url>http://www.gnu.org/licenses/gpl.html</url>
+			<name>The GNU General Public License, Version 3.0</name>
+			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
 		</license>
 	</licenses>
+
+	<developers>
+		<developer>
+			<name>Koen Hindriks</name>
+			<email>k.v.hindriks@gmail.com</email>
+			<organization>eishub</organization>
+			<organizationUrl>https://github.com/koenhindriks</organizationUrl>
+		</developer>
+	</developers>
 
 	<!-- <properties> <skipTests>false</skipTests> <maven.javadoc.skip>true</maven.javadoc.skip> 
 		</properties> -->
