poms added scm, organization, issue management

--- a/EmohawkEnvironment/pom.xml
+++ b/EmohawkEnvironment/pom.xml
@@ -22,6 +22,7 @@
 		</license>
 	</licenses>
 
+
 	<developers>
 		<developer>
 			<name>Koen Hindriks</name>
@@ -30,7 +31,25 @@
 			<organizationUrl>https://github.com/koenhindriks</organizationUrl>
 		</developer>
 	</developers>
-	
+
+
+	<organization>
+		<name>eishub</name>
+		<url>http://github.com/eishub</url>
+	</organization>
+
+
+	<issueManagement>
+		<url>https://github.com/eishub/UT3/issues</url>
+		<system>Github Unreal Environment Issues</system>
+	</issueManagement>
+
+	<scm>
+		<connection>scm:git:git@github.com:eishub/UT3.git</connection>
+		<developerConnection>scm:git:git@github.com:eishub/UT3.git</developerConnection>
+		<url>https://github.com:eishub/UT3</url>
+	</scm>
+		
 	<dependencies>
 
 		<dependency>
