--- a/BaseUnrealEnvironment/pom.xml
+++ b/BaseUnrealEnvironment/pom.xml
@@ -7,8 +7,8 @@
 	<version>3.5.5-SNAPSHOT</version>
 	<name>goal-base-unreal-environment</name>
 	<description>Base environment for Unreal Tournament</description>
-
 	<url>https://github.com/eishub/UT3</url>
+
 	<licenses>
 		<license>
 			<name>The GNU General Public License, Version 3.0</name>
@@ -29,6 +29,20 @@
 		<name>eishub</name>
 		<url>http://github.com/eishub</url>
 	</organization>
+
+
+	<issueManagement>
+		<url>https://github.com/eishub/UT3/issues</url>
+		<system>Github Unreal Environment Issues</system>
+	</issueManagement>
+
+	<scm>
+		<connection>scm:git:git@github.com:eishub/UT3.git</connection>
+		<developerConnection>scm:git:git@github.com:eishub/UT3.git</developerConnection>
+		<url>https://github.com:eishub/UT3</url>
+	</scm>
+
+
 	
 	<dependencies>
 		<dependency>
