--- a/UT2004EnvironmentDependencies/pom.xml
+++ b/UT2004EnvironmentDependencies/pom.xml
@@ -31,6 +31,24 @@
 		</dependency>
 	</dependencies>
 
+
+	<organization>
+		<name>eishub</name>
+		<url>http://github.com/eishub</url>
+	</organization>
+
+
+	<issueManagement>
+		<url>https://github.com/eishub/UT3/issues</url>
+		<system>Github Unreal Environment Issues</system>
+	</issueManagement>
+
+	<scm>
+		<connection>scm:git:git@github.com:eishub/UT3.git</connection>
+		<developerConnection>scm:git:git@github.com:eishub/UT3.git</developerConnection>
+		<url>https://github.com:eishub/UT3</url>
+	</scm>
+	
 	<build>
 		<plugins>
 			<!-- copies dependencies for old style builds. -->
