--- a/UTVisualizer/pom.xml
+++ b/UTVisualizer/pom.xml
@@ -25,6 +25,24 @@
 		</developer>
 	</developers>
 
+
+	<organization>
+		<name>eishub</name>
+		<url>http://github.com/eishub</url>
+	</organization>
+
+
+	<issueManagement>
+		<url>https://github.com/eishub/UT3/issues</url>
+		<system>Github Unreal Environment Issues</system>
+	</issueManagement>
+
+	<scm>
+		<connection>scm:git:git@github.com:eishub/UT3.git</connection>
+		<developerConnection>scm:git:git@github.com:eishub/UT3.git</developerConnection>
+		<url>https://github.com:eishub/UT3</url>
+	</scm>
+	
 	<!-- <properties> <skipTests>false</skipTests> <maven.javadoc.skip>true</maven.javadoc.skip> 
 		</properties> -->
 
