#3411 fixing pom version numbers and uploading to repo

--- a/UT2004Environment/pom.xml
+++ b/UT2004Environment/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>nl.tudelft.goal</groupId>
 	<artifactId>goal-ut2004-environment</artifactId>
 	<name>goal-ut2004-environment</name>
-	<version>3.5.5-SNAPSHOT</version>
+	<version>3.5.5</version>
 	<url>https://github.com/eishub/UT3</url>
 	<licenses>
 		<license>
@@ -52,7 +52,7 @@
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-ut2004-environment-util</artifactId>
-			<version>3.5.5-SNAPSHOT</version>
+			<version>3.5.5</version>
 		</dependency>
 		<dependency>
 			<groupId>nl.tudelft.pogamut</groupId>
