--- a/UT2004EnvironmentDependencies/pom.xml
+++ b/UT2004EnvironmentDependencies/pom.xml
@@ -3,11 +3,19 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nl.tudelft.goal</groupId>
 	<artifactId>goal-ut2004-environment-dependencies</artifactId>
-	<version>3.5.4-SNAPSHOT</version>
+	<version>3.5.4</version>
 	<name>UT2004EnvironmentDependencies</name>
 	<description>Dependencies for the UT2004 environment</description>
 	<url>https://github.com/eishub/UT3</url>
-	
+
+	<repositories>
+		<repository>
+			<id>eishub-mvn-repo</id>
+			<url>https://raw.github.com/eishub/mvn-repo/master</url>
+		</repository>
+	</repositories>
+
+
 	<licenses>
 		<license>
 			<name>The GNU General Public License, Version 3.0</name>
@@ -23,12 +31,12 @@
 			<organizationUrl>https://github.com/koenhindriks</organizationUrl>
 		</developer>
 	</developers>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-ut2004-environment</artifactId>
-			<version>3.5.4-SNAPSHOT</version>
+			<version>3.5.5</version>
 		</dependency>
 	</dependencies>
 
@@ -49,7 +57,7 @@
 		<developerConnection>scm:git:git@github.com:eishub/UT3.git</developerConnection>
 		<url>https://github.com:eishub/UT3</url>
 	</scm>
-	
+
 	<build>
 		<plugins>
 			<!-- copies dependencies for old style builds. -->
@@ -71,6 +79,49 @@
 
 
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+				<configuration>
+					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.10</version>
+				<configuration>
+					<server>github</server>
+					<!-- git commit message -->
+					<message>Maven artifacts for ${project.name} version
+						${project.version}</message>
+					<!-- matches distribution management repository url above -->
+					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+					<!-- remote branch name -->
+					<branch>refs/heads/master</branch>
+					<merge>true</merge>
+					<includes>
+						<include>**/*</include>
+					</includes>
+					<!-- github repo name -->
+					<repositoryName>mvn-repo</repositoryName>
+					<!-- github organization -->
+					<repositoryOwner>eishub</repositoryOwner>
+				</configuration>
+				<executions>
+					<!-- run site-maven-plugin as part of the build's 'deploy' phase -->
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>deploy</phase>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 
 
