--- a/UTVisualizer/pom.xml
+++ b/UTVisualizer/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>goal-unreal-visualizer</artifactId>
 	<name>UTVisualizer</name>
 	<description>A visualizer for Unreal Tournament.</description>
-	<version>3.5.5-SNAPSHOT</version>
+	<version>3.5.5</version>
 	<url>https://github.com/eishub/UT3</url>
 	<licenses>
 		<license>
@@ -50,12 +50,12 @@
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-unreal-visualizer-frame</artifactId>
-			<version>3.5.5-SNAPSHOT</version>
+			<version>3.5.5</version>
 		</dependency>
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-ut-visualizer-connection</artifactId>
-			<version>3.5.5-SNAPSHOT</version>
+			<version>3.5.5</version>
 		</dependency>
 		<dependency>
 			<groupId>cz.cuni.amis.pogamut</groupId>
@@ -167,8 +167,51 @@
 				<artifact> <file>${project.build.directory}/${project.artifactId}-${project.version}-bin.zip</file> 
 				<type>zip</type> <classifier>bin</classifier> </artifact> </artifacts> </configuration> 
 				</execution> </executions> </plugin> -->
-		</plugins>
 
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+				<configuration>
+					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.10</version>
+				<configuration>
+					<server>github</server>
+					<!-- git commit message -->
+					<message>Maven artifacts for ${project.name} version
+						${project.version}</message>
+					<!-- matches distribution management repository url above -->
+					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+					<!-- remote branch name -->
+					<branch>refs/heads/master</branch>
+					<merge>true</merge>
+					<includes>
+						<include>**/*</include>
+					</includes>
+					<!-- github repo name -->
+					<repositoryName>mvn-repo</repositoryName>
+					<!-- github organization -->
+					<repositoryOwner>eishub</repositoryOwner>
+				</configuration>
+				<executions>
+					<!-- run site-maven-plugin as part of the build's 'deploy' phase -->
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>deploy</phase>
+					</execution>
+				</executions>
+			</plugin>
+
+		</plugins>
 	</build>
 
 	<repositories>
