--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	
+
 	<!-- Just a wrapper POM to build all submodules with one run. -->
-	
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nl.tudelft.goal</groupId>
 	<artifactId>ut-goal-environment</artifactId>
-	<name>goal-ut3-environment</name>
-	<version>3.5.5-SNAPSHOT</version>
+	<name>goal-ut-environment</name>
+	<version>3.5.5</version>
 	<url>https://github.com/eishub/UT3</url>
 	<packaging>pom</packaging>
 	<licenses>
@@ -51,14 +51,27 @@
 		<module>UT2004EnvironmentUtil</module>
 		<module>UT2004EnvironmentManual</module>
 		<module>UT2004EnvironmentDependencies</module>
-		
+
 		<module>UTVisualizerConnection</module>
-		<!--  <module>UTVisualizerDependencies</module> this is useless?? -->
+		<!-- <module>UTVisualizerDependencies</module> this is useless?? -->
 		<module>UTVisualizerFrame</module>
 		<module>UTVisualizer</module>
-		
+
 		<module>UT2004Environment</module>
 		<module>UT3Environment</module>
 	</modules>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
